ops/AKS Deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-microservices
  labels:
    app: python-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python-app
        image: <my-acr-name>.azurecr.io/<my-image-name>:latest
        ports:
        - containerPort: 5000
