ops/AKS Deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-microservice-service
spec:
  type: ClusterIP
  selector:
    app: python-app
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
